Improve translation quality (part2)

--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Difficile
 
 SING_OPTIONS=Options
 
-SING_OPTIONS_GAME=Jeu
-SING_OPTIONS_GRAPHICS=Graphismes
-SING_OPTIONS_SOUND=Audio
-SING_OPTIONS_LYRICS=Paroles
-SING_OPTIONS_THEMES=Thèmes
-SING_OPTIONS_MICROPHONES=Micros
-SING_OPTIONS_ADVANCED=Avancé
-SING_OPTIONS_NETWORK=Internet
-SING_OPTIONS_WEBCAM=Caméra
-SING_OPTIONS_PROFILES=Profils
-SING_OPTIONS_EXIT=Retour
-
 SING_OPTIONS_GAME_LANGUAGE=Langue
 SING_OPTIONS_GAME_SONGMENU=Menu
 SING_OPTIONS_GAME_DUETS=Duos
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Inférieure
 OPTION_VALUE_OTHER=Autre
 OPTION_VALUE_FILL=Rempli
 OPTION_VALUE_OUTLINE=Bord
-OPTION_VALUE_BLUE=Bleu
-OPTION_VALUE_GREEN=Vert
-OPTION_VALUE_PINK=Rose
-OPTION_VALUE_RED=Rouge
-OPTION_VALUE_VIOLET=Violet
-OPTION_VALUE_ORANGE=Orange
-OPTION_VALUE_YELLOW=Jaune
-OPTION_VALUE_BROWN=Marron
-OPTION_VALUE_BLACK=Noir
-OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Gris
-OPTION_VALUE_WHITE=Blanc
-OPTION_VALUE_TURQUOISE=Turquoise
-OPTION_VALUE_SALMON=Saumon
-OPTION_VALUE_GREENYELLOW=Vert pomme
-OPTION_VALUE_LAVENDER=Lavande
-OPTION_VALUE_BEIGE=Beige
-OPTION_VALUE_TEAL=Vert canard
-OPTION_VALUE_ORCHID=Rose orchidée
-OPTION_VALUE_STEELBLUE=Bleu acier
-OPTION_VALUE_PLUM=Prune
-OPTION_VALUE_CHOCOLATE=Chocolat
-OPTION_VALUE_GOLD=Doré
-OPTION_VALUE_DARKBLUE=Bleu foncé
-OPTION_VALUE_SKY=Bleu ciel
-OPTION_VALUE_HARLEQUIN=Vert fluo
-OPTION_VALUE_CYAN=Cyan
-OPTION_VALUE_FLAME=Flamme
+
 
 SING_LEGEND_SELECT=Valider
 SING_LEGEND_NAVIGATE=Naviguer
@@ -382,7 +343,7 @@ SONG_MENU_LEGEND_DUET=Duo
 SONG_MENU_LEGEND_RAP=Rap
 SONG_MENU_LEGEND_CREATEDBY=Créée par
 SONG_MENU_LEGEND_FIXEDBY=Réparée par
-;TODO: SONG_MENU_LEGEND_UNVALIDATED=Unvalidated
+SONG_MENU_LEGEND_UNVALIDATED=Non validé
 
 SONG_MENU_SONG=Chanson
 SONG_MENU_MEDLEY=Medley
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Medley
 SONG_MENU_NAME_SONG=Menu
 SONG_MENU_NAME_MEDLEY=Menu des Medley
 SONG_MENU_ADD_SONG=Ajouter la chanson
+SONG_MENU_ADD_SONG_TO_LIST=Ajouter chanson à la liste
 SONG_MENU_DELETE_SONG=Supprimer la chanson
 SONG_MENU_START_MEDLEY=Chantez !
 SONG_MENU_START_5_MEDLEY=Chantez %0:d chansons !
@@ -613,83 +575,112 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d. Merc
 
 ;COMMON TRANSLATIONS:
 
-;TODO: C_ABOUT=About...
-;TODO: C_ALL=All
+C_ABOUT=À propos de...
+C_ADVANCED=Avancé
+C_ALL=Tout
+C_APPLY_CHANGES=Appliquer les modifications
 
-C_BACK=Avant
-;TODO: C_BOTTOM=Bottom
+C_BACK=Retour
+C_BOTTOM=Inferiéur
 
-;TODO: C_CLASSIC=Classic
-;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
-;TODO: C_CONTINUE=Continue
-;TODO: C_CREATEDBY=Created by
+C_CLASSIC=Classique
+C_CHALLENGE=Challenge
+C_COLOR_BEIGE=Beige
+C_COLOR_BLACK=Noir
+C_COLOR_BLUE=Bleu acier
+C_COLOR_BROWN=Marron
+C_COLOR_CYAN=Cyan
+C_COLOR_CHOCOLATE=Chocolat
+C_COLOR_DARKBLUE=Bleu foncé
+C_COLOR_FLAME=Flamme
+C_COLOR_GOLD=Doré
+C_COLOR_GRAY=Gris
+C_COLOR_GREEN=Vert
+C_COLOR_GREENYELLOW=Vert pomme
+C_COLOR_HARLEQUIN=Vert fluo
+C_COLOR_LAVENDER=Lavande
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Orange
+C_COLOR_ORCHID=Rose orchidée
+C_COLOR_OTHER=Autre
+C_COLOR_PINK=Rose
+C_COLOR_PLUM=Prune
+C_COLOR_RED=Rouge
+C_COLOR_SALMON=Saumon
+C_COLOR_SKY=Bleu ciel
+C_COLOR_STEELBLUE=Steel blue
+C_COLOR_TEAL=Vert canard
+C_COLOR_TURQUOISE=Turquoise
+C_COLOR_VIOLET=Violet
+C_COLOR_WHITE=Blanc
+C_COLOR_YELLOW=Jaune
+C_CONTINUE=Continuer
+C_CREATEDBY=Créée par
 
-;TODO: C_ERROR=Error
+C_ERROR=Erreur
 
-;TODO: C_FIND=Find
-;TODO: C_FIXEDBY=Fixed by
-;TODO: C_FOLDERS=Folders
+C_FIND=Rechercher
+C_FIXEDBY=Réparée par
+C_FOLDERS=Dossiers
 
-;TODO: C_INFORMATION=Information
+C_GAME=Jeu
+C_GRAPHICS=Graphismes
 
-;TODO: C_JOKER=Joker
-;TODO: C_JUKEBOX=Jukebox
+C_INFORMATION=Information
+C_INTERNET=Internet
 
-;TODO: C_PLAYERS=Players
+C_JOKER=Joker
+C_JUKEBOX=Jukebox
 
-;TODO: C_LEGEND=Legend
-;TODO: C_LINE=Line
+C_LEGEND=Légende
+C_LINE=Ligne
+C_LYRICS=Paroles
 
-;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
-;TODO: C_MODE=Mode
+C_MEDLEY=Version courte
+C_MEDLEYC=Version courte calculé
+C_MICROPHONES=Micros
+C_MODE=Mode
 
-;TODO: C_NEXT=Next
-;TODO: C_NO=No
+C_NEXT=Suivant
+C_NO=No
+C_NO_INTERNET_CONNECTION=Pas de connexion Internet
 
-;TODO: C_RANDOM=Random
-;TODO: C_RAP=Rap
-;TODO: C_REPEAT=Repeat
+C_OPEN_PLAYLIST=Ouvrir playlist
+C_OPTIONS=Options
 
-;TODO: C_SAVE=Save
+C_PLAYERS=Joueurs
+C_PLAYLIST=Playlist
+C_PROFILES=Profils
+
+C_QUIT=Sortir
+
+C_RANDOM=Aléatoire
+C_RAP=Rap
+C_REFRESH_SCORES=Mettre à jour les scores
+C_REPEAT=Répéter
+
+C_SAVE=Enregistrer
 C_SEARCH_NEW_SONGS=Rechercher de nouvelles chansons
-;TODO: C_SING=Sing
-;TODO: C_SONG=Song
-;TODO: C_SONGS=Songs
-;TODO: C_SORT=Sort
+C_SELECT_THIS_SONG=Sélectionnez cette chanson
+C_SEND=Envoyer
+C_SING=Chanter
+C_SING_MEDLEY=Chanter version courte
+C_SONG=Chanson
+C_SONGS=Chansons
+C_SORT=Trier
+C_SORT_SONGS=Trier les chansons
+C_SOUND=Audio
+;TODO: C_STATISTICS=Statistics
+C_STATS=Statistiques
 
-;TODO: C_TOP=Top
+C_THEME=Thème
+C_THEMES=Thèmes
+C_TOP=Supérieurer
 
-;TODO: C_UNVALIDATED=Unvalidated
+C_UNVALIDATED=Non validé
 
-;TODO: C_VIDEO=Video
+C_VIDEO=Vidéo
 
-;TODO: C_YES=Yes
+C_WEBCAM=Caméra
+
+C_YES=Oui
