--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -41,24 +41,12 @@ OPTION_VALUE_HARD=Sunku
 
 SING_OPTIONS=Galimybės
 
-SING_OPTIONS_GAME=Žaidimas
-SING_OPTIONS_GRAPHICS=Grafika
-SING_OPTIONS_SOUND=Garsas
-SING_OPTIONS_LYRICS=Dainos žodžiai
-SING_OPTIONS_THEMES=Temos
-SING_OPTIONS_MICROPHONES=Įrašyti
-SING_OPTIONS_ADVANCED=Išplėstinė
-SING_OPTIONS_NETWORK=Internetas
-;TODO: SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Atgal
-
 SING_OPTIONS_GAME_LANGUAGE=Kalba
 SING_OPTIONS_GAME_SONGMENU=Daina Meniu
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Skirtukai
 SING_OPTIONS_GAME_SORTING=Rūšiavimas
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Kontrolieriaus palaikymas
 
 OPTION_VALUE_ROULETTE=Ruletė
@@ -82,12 +70,12 @@ OPTION_VALUE_YEAR=Metai
 OPTION_VALUE_DECADE=Dešimtmetis
 OPTION_VALUE_PLAYLIST=Grojaraštis
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Visas ekranas
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rezoliucija
 SING_OPTIONS_GRAPHICS_SCREENFADE=Ekrano blukimas
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing effects
 SING_OPTIONS_GRAPHICS_VISUALIZER=Vizualizacija
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Filmo dydis
 
@@ -142,7 +130,7 @@ SING_OPTIONS_MICROPHONES_MIC_BOOST=Mikrobangų krosnelė
 
 SING_OPTIONS_ADVANCED_DEBUG=Derinti
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloskopas
-;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK=After Song Select
+;TODO: SING_OPTIONS_ADVANCED_ONSONGCLICK=After song select
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Saugos klausimai
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 SING_OPTIONS_ADVANCED_TOPSCORES=Geriausi rezultatai
@@ -155,7 +143,7 @@ OPTION_VALUE_PLAYER=Žaidėjas
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Vartotojo vardas
 SING_OPTIONS_NETWORK_PASSWORD=Slaptažodis
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Žaidėjas
 SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Siųsti (Lengva)
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Atšaukti
 WEBSITE_LOGIN_ERROR=Neteisingas prisijungimas!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ WEBSITE_LOGIN_ERROR=Neteisingas prisijungimas!
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
 SONG_MENU_REFRESH_SCORES_ALL_SONGS=Visos dainos
 SONG_MENU_REFRESH_SCORES_ONLY_SONG=Ši daina
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
 SONG_SCORE_MEDIA=Vidurkis:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 SCORE_SEND=Siųsti
 SCORE_SEND_PLAYER=Žaidėjas
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Parsisiųsti
 SCORE_DOWNLOAD_SONG=Daina:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Atšaukti
 SCORE_DOWNLOAD_OK=Gerai
@@ -232,18 +220,18 @@ SING_OPTIONS_WEBCAM_BRIGHTNESS=Ryškumas
 SING_OPTIONS_WEBCAM_EFFECT=Efektas
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normalus
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Slenkstis
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Apatinė
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Mėlynas
-OPTION_VALUE_GREEN=Žalias
-OPTION_VALUE_PINK=Rožinis
-OPTION_VALUE_RED=Raudonas
-OPTION_VALUE_VIOLET=Violetinis
-OPTION_VALUE_ORANGE=Oranžinis
-OPTION_VALUE_YELLOW=Geltonas
-OPTION_VALUE_BROWN=Rudas
-OPTION_VALUE_BLACK=Juodas
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-;TODO: OPTION_VALUE_GRAY=Gray
-OPTION_VALUE_WHITE=Balta
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-OPTION_VALUE_LAVENDER=Levanda
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-OPTION_VALUE_CHOCOLATE=Šokoladas
-OPTION_VALUE_GOLD=Auksas
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-OPTION_VALUE_SKY=Dangus
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+
 
 SING_LEGEND_SELECT=Pasirinkite
 SING_LEGEND_NAVIGATE=Naršyti
@@ -390,17 +351,18 @@ SONG_MENU_SONG=Daina
 ;TODO: SONG_MENU_NAME_SONG=Song Menu
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 ;TODO: SONG_MENU_ADD_SONG=Add Song
-;TODO: SONG_MENU_DELETE_SONG=Delete Song
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
+;TODO: SONG_MENU_DELETE_SONG=Delete song
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -428,7 +390,7 @@ PARTY_PLAYER_ENTER_NAME=Įveskite pavadinimus
 
 ;TODO: PARTY_ROUND_LEGEND_CONTINUE=Start round
 
-;TODO: PARTY_SONG_WHEREAMI=Party Song-Selection
+;TODO: PARTY_SONG_WHEREAMI=Party song-selection
 ;TODO: PARTY_SONG_LEGEND_CONTINUE=Sing
 ;TODO: PARTY_SONG_MENU=Party menu
 
@@ -437,10 +399,10 @@ OPTION_VALUE_SELECT_PLAYERS=Pasirinkite žaidėjus
 OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
 ;TODO: PARTY_SCORE_DESC=Score of the last round
-;TODO: PARTY_SCORE_WHEREAMI=Party Points
+;TODO: PARTY_SCORE_WHEREAMI=Party points
 
 ;TODO: PARTY_WIN_DESC=Winner of the party-game
-;TODO: PARTY_WIN_WHEREAMI=Party Winner
+;TODO: PARTY_WIN_WHEREAMI=Party winner
 ;TODO: PARTY_WIN_LEGEND_CONTINUE=Back to main-menu
 
 ;TODO: PARTY_ROUND=Round
@@ -453,7 +415,7 @@ PARTY_NOBODY=Niekas
 ;TODO: PARTY_SCORE_WINS=%s
 ;TODO: PARTY_SCORE_WINS2=Wins!
 
-;TODO: MODE_RANDOM_NAME=Random Mode
+;TODO: MODE_RANDOM_NAME=Random mode
 ;TODO: MODE_RANDOM_DESC=Keep yourself on your toes! The game will select a mode for you at random!
 
 ;TODO: MODE_HOLDTHELINE_NAME=Hold the Line
@@ -519,7 +481,7 @@ STAT_MAIN=Statistika
 ;TODO: STAT_FORMAT_DATE=%1:.2d.%0:.2d.%2:d
 
 STAT_DETAIL=Statistika
-;TODO: STAT_DETAIL_WHEREAMI=Detail Statistics
+;TODO: STAT_DETAIL_WHEREAMI=Detail statistics
 
 STAT_NEXT=Kitas puslapis
 STAT_PREV=Ankstesnis puslapis
@@ -531,26 +493,26 @@ STAT_REVERSE=Atvirkštinė tvarka
 ;TODO: STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Geriausi dainininkai
-;TODO: STAT_DESC_SINGERS_REVERSED=Worst Singers
-;TODO: STAT_FORMAT_SINGERS=%0:s \n Average Score: %1:d
+;TODO: STAT_DESC_SINGERS_REVERSED=Worst singers
+;TODO: STAT_FORMAT_SINGERS=%0:s \n Average score: %1:d
 
 STAT_DESC_SONGS=Populiariausi dainos
-;TODO: STAT_DESC_SONGS_REVERSED=Least popular Songs
+;TODO: STAT_DESC_SONGS_REVERSED=Least popular songs
 ;TODO: STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sung
 
-;TODO: STAT_DESC_BANDS=Most popular Bands
-;TODO: STAT_DESC_BANDS_REVERSED=Least popular Bands
+;TODO: STAT_DESC_BANDS=Most popular bands
+;TODO: STAT_DESC_BANDS_REVERSED=Least popular bands
 ;TODO: STAT_FORMAT_BANDS=%0:s \n %1:dx Sung
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 PARTY_MODE_CHALLENGE=Iššūkis
 PARTY_MODE_TOURNAMENT=Turnyras
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
+;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT=Turnyras
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 ;TODO: JUKEBOX_RANDOM=Random
 JUKEBOX_REPEAT=Pakartokite
 JUKEBOX_FIND=Rasti:
 JUKEBOX_SORT=Rūšiuoti:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -598,10 +560,10 @@ MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_INFO_TITLE=Information
 ;TODO: MSG_QUESTION_TITLE=Question
 ;TODO: MSG_QUIT_USDX=Really leave UltraStar?
-;TODO: MSG_END_PARTY=Really leave Party Mode?
+;TODO: MSG_END_PARTY=Really leave party mode?
 
-;TODO: ERROR_NO_SONGS=No Songs loaded
-;TODO: ERROR_NO_PLUGINS=No Plugins loaded
+;TODO: ERROR_NO_SONGS=No songs loaded
+;TODO: ERROR_NO_PLUGINS=No plugins loaded
 ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: ERROR_CORRUPT_SONG=Song could not be loaded.
 ;TODO: ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
@@ -614,41 +576,44 @@ ERROR_LOADING_SONGS=Wait for loading all the songs
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Išplėstinė
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Atgal
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
 ;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
+C_COLOR_BLACK=Juodas
+C_COLOR_BLUE=Mėlynas
+C_COLOR_BROWN=Rudas
 ;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
+C_COLOR_CHOCOLATE=Šokoladas
+;TODO: C_COLOR_DARKBLUE=Dark blue
 ;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
+C_COLOR_GOLD=Auksas
 ;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
+C_COLOR_GREEN=Žalias
+;TODO: C_COLOR_GREENYELLOW=Greenyellow
 ;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
+C_COLOR_LAVENDER=Levanda
 ;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
+C_COLOR_ORANGE=Oranžinis
 ;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Rožinis
 ;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
+C_COLOR_RED=Raudonas
 ;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
+C_COLOR_SKY=Dangus
+;TODO: C_COLOR_STEELBLUE=Steel blue
 ;TODO: C_COLOR_TEAL=Teal
 ;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_VIOLET=Violetinis
+C_COLOR_WHITE=Balta
+C_COLOR_YELLOW=Geltonas
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_LOADING_SONGS=Wait for loading all the songs
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Žaidimas
+C_GRAPHICS=Grafika
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internetas
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Dainos žodžiai
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Įrašyti
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Garsas
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Temos
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
