--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Trudno
 
 SING_OPTIONS=Opcje
 
-SING_OPTIONS_GAME=Gra
-SING_OPTIONS_GRAPHICS=Grafika
-SING_OPTIONS_SOUND=Dźwięk
-SING_OPTIONS_LYRICS=Tekst
-SING_OPTIONS_THEMES=Style
-SING_OPTIONS_MICROPHONES=Nagrywanie
-SING_OPTIONS_ADVANCED=Zaawansow.
-SING_OPTIONS_NETWORK=Internet
-SING_OPTIONS_WEBCAM=Kamerka
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Wstecz
-
 SING_OPTIONS_GAME_LANGUAGE=Język
 SING_OPTIONS_GAME_SONGMENU=Menu piosenki
 SING_OPTIONS_GAME_DUETS=Duety
@@ -264,34 +252,7 @@ OPTION_VALUE_TO_SING=Śpiewaj
 OPTION_VALUE_OTHER=Inne
 OPTION_VALUE_FILL=Wypełnij
 OPTION_VALUE_OUTLINE=Zarys
-OPTION_VALUE_BLUE=Niebieski
-OPTION_VALUE_GREEN=Zielony
-OPTION_VALUE_PINK=Różowy
-OPTION_VALUE_RED=Czerwony
-OPTION_VALUE_VIOLET=Fioletowy
-OPTION_VALUE_ORANGE=Pomarańczowy
-OPTION_VALUE_YELLOW=Żółty
-OPTION_VALUE_BROWN=Brązowy
-OPTION_VALUE_BLACK=Czarny
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Szary
-OPTION_VALUE_WHITE=Biały
-OPTION_VALUE_TURQUOISE=Turkusowy
-OPTION_VALUE_SALMON=Łososiowy
-OPTION_VALUE_GREENYELLOW=Zielono-żółty
-OPTION_VALUE_LAVENDER=Lawendowy
-OPTION_VALUE_BEIGE=Beżowy
-OPTION_VALUE_TEAL=Cyraneczkowy
-OPTION_VALUE_ORCHID=Storczykowy
-OPTION_VALUE_STEELBLUE=Stalowo-niebieski
-OPTION_VALUE_PLUM=Śliwkowy
-OPTION_VALUE_CHOCOLATE=Czekoladowy
-OPTION_VALUE_GOLD=Złoty
-OPTION_VALUE_DARKBLUE=Ciemno-niebieski
-OPTION_VALUE_SKY=Niebieski
-OPTION_VALUE_HARLEQUIN=Arlekin
-OPTION_VALUE_CYAN=Cyjan
-OPTION_VALUE_FLAME=Płomień
+
 
 SING_LEGEND_SELECT=Wybierz
 SING_LEGEND_NAVIGATE=Nawiguj
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Składanka
 SONG_MENU_NAME_SONG=Menu piosenki
 SONG_MENU_NAME_MEDLEY=Menu składanki
 SONG_MENU_ADD_SONG=Dodaj piosenkę
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Usuń piosenkę
 SONG_MENU_START_MEDLEY=Śpiewaj!
 SONG_MENU_START_5_MEDLEY=Śpiewaj %0:d piosenek!
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawd
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+;TODO: C_ADVANCED=Zaawansow
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Wstecz
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
+C_COLOR_BEIGE=Beżowy
+C_COLOR_BLACK=Czarny
+C_COLOR_BLUE=Niebieski
+C_COLOR_BROWN=Brązowy
+C_COLOR_CYAN=Cyjan
+C_COLOR_CHOCOLATE=Czekoladowy
+C_COLOR_DARKBLUE=Ciemno-niebieski
+C_COLOR_FLAME=Płomień
+C_COLOR_GOLD=Złoty
+C_COLOR_GRAY=Szary
+C_COLOR_GREEN=Zielony
+C_COLOR_GREENYELLOW=Zielono-żółty
+C_COLOR_HARLEQUIN=Arlekin
+C_COLOR_LAVENDER=Lawendowy
 ;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_ORANGE=Pomarańczowy
+C_COLOR_ORCHID=Storczykowy
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Różowy
+C_COLOR_PLUM=Śliwkowy
+C_COLOR_RED=Czerwony
+C_COLOR_SALMON=Łososiowy
+C_COLOR_SKY=Niebieski
+C_COLOR_STEELBLUE=Stalowo-niebieski
+C_COLOR_TEAL=Cyraneczkowy
+C_COLOR_TURQUOISE=Turkusowy
+C_COLOR_VIOLET=Fioletowy
+C_COLOR_WHITE=Biały
+C_COLOR_YELLOW=Żółty
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Gracz %d nie ma przypisanego mikrofonu. Sprawd
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Gra
+C_GRAPHICS=Grafika
+
 ;TODO: C_INFORMATION=Information
+;TODO: C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Tekst
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Nagrywanie
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Dźwięk
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Style
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Kamerka
 
 ;TODO: C_YES=Yes
