--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Difícil
 
 SING_OPTIONS=Opções
 
-SING_OPTIONS_GAME=Jogo
-SING_OPTIONS_GRAPHICS=Gráficos
-SING_OPTIONS_SOUND=Som
-SING_OPTIONS_LYRICS=Letras
-SING_OPTIONS_THEMES=Temas
-SING_OPTIONS_MICROPHONES=Gravação
-SING_OPTIONS_ADVANCED=Avançado
-SING_OPTIONS_NETWORK=Network
-SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Voltar
-
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_SONGMENU=Menu de Canções
 SING_OPTIONS_GAME_DUETS=Duetos
@@ -104,7 +92,7 @@ SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Playback Microfone
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Música de Fundo
 SING_OPTIONS_SOUND_CLICK_ASSIST=Click de Ajuda
 SING_OPTIONS_SOUND_BEAT_CLICK=Click de Batida
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Preview Volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Preview Fading
 
@@ -264,34 +252,7 @@ OPTION_VALUE_TO_SING=Cantar
 OPTION_VALUE_OTHER=Outra
 OPTION_VALUE_FILL=Fundo
 OPTION_VALUE_OUTLINE=Contorno
-OPTION_VALUE_BLUE=Azul
-OPTION_VALUE_GREEN=Verde
-OPTION_VALUE_PINK=Rosa
-OPTION_VALUE_RED=Vermelho
-OPTION_VALUE_VIOLET=Violeta
-OPTION_VALUE_ORANGE=Laranja
-OPTION_VALUE_YELLOW=Amarelo
-OPTION_VALUE_BROWN=Castanho
-OPTION_VALUE_BLACK=Preto
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Cinzento
-OPTION_VALUE_WHITE=Branco
-OPTION_VALUE_TURQUOISE=Turquesa
-OPTION_VALUE_SALMON=Salmão
-OPTION_VALUE_GREENYELLOW=Lima
-OPTION_VALUE_LAVENDER=Lavanda
-OPTION_VALUE_BEIGE=Bege
-OPTION_VALUE_TEAL=Verde Azulado
-OPTION_VALUE_ORCHID=Orquídea
-OPTION_VALUE_STEELBLUE=Azul Aço
-OPTION_VALUE_PLUM=Ameixa
-OPTION_VALUE_CHOCOLATE=Chocolate
-OPTION_VALUE_GOLD=Ouro
-OPTION_VALUE_DARKBLUE=Azul Escuro
-OPTION_VALUE_SKY=Celeste
-OPTION_VALUE_HARLEQUIN=Alecrim
-OPTION_VALUE_CYAN=Ciano
-OPTION_VALUE_FLAME=Fogo
+
 
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Medley
 SONG_MENU_NAME_SONG=Menu Canção
 SONG_MENU_NAME_MEDLEY=Menu Medley
 SONG_MENU_ADD_SONG=Adicionar Canção
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Apagar Canção
 SONG_MENU_START_MEDLEY=Cantar!
 SONG_MENU_START_5_MEDLEY=Cantar %0:d canções!
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum mi
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Avançado
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Voltar
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_BEIGE=Bege
+C_COLOR_BLACK=Preto
+C_COLOR_BLUE=Azul
+C_COLOR_BROWN=Castanho
+C_COLOR_CYAN=Ciano
+C_COLOR_CHOCOLATE=Chocolate
+C_COLOR_DARKBLUE=Azul Escuro
+C_COLOR_FLAME=Fogo
+C_COLOR_GOLD=Ouro
+C_COLOR_GRAY=Cinzento
+C_COLOR_GREEN=Verde
+C_COLOR_GREENYELLOW=Lima
+C_COLOR_HARLEQUIN=Alecrim
+C_COLOR_LAVENDER=Lavanda
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Laranja
+C_COLOR_ORCHID=Orquídea
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Rosa
+C_COLOR_PLUM=Ameixa
+C_COLOR_RED=Vermelho
+C_COLOR_SALMON=Salmão
+C_COLOR_SKY=Celeste
+C_COLOR_STEELBLUE=Azul Aço
+C_COLOR_TEAL=Verde azulado
+C_COLOR_TURQUOISE=Turquesa
+C_COLOR_VIOLET=Violeta
+C_COLOR_WHITE=Branco
+C_COLOR_YELLOW=Amarelo
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum mi
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Jogo
+C_GRAPHICS=Gráficos
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Letras
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Gravação
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Som
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Temas
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
