--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -41,24 +41,12 @@ OPTION_VALUE_HARD=Tesko
 
 SING_OPTIONS=Opcije
 
-SING_OPTIONS_GAME=Igra
-SING_OPTIONS_GRAPHICS=Grafika
-SING_OPTIONS_SOUND=Zvuk
-SING_OPTIONS_LYRICS=Lirike
-SING_OPTIONS_THEMES=Teme
-SING_OPTIONS_MICROPHONES=Snimanje
-SING_OPTIONS_ADVANCED=Ostalo
-SING_OPTIONS_NETWORK=Интернет
-SING_OPTIONS_WEBCAM=Вебцам
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Nazad
-
 SING_OPTIONS_GAME_LANGUAGE=Jezik
 SING_OPTIONS_GAME_SONGMENU=Meni Pesme
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Tabovi
 SING_OPTIONS_GAME_SORTING=Sortiranje
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Активирајте гамепад
 
 OPTION_VALUE_ROULETTE=Роулетте
@@ -82,7 +70,7 @@ OPTION_VALUE_YEAR=Година
 OPTION_VALUE_DECADE=Декада
 OPTION_VALUE_PLAYLIST=Lista pesama
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pun Ekran
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rezolucija
@@ -97,14 +85,14 @@ OPTION_VALUE_WHENNOVIDEO=Када нема видео записа
 OPTION_VALUE_WHENNOVIDEOANDIMAGE=Када нема видео и слике
 
 ;TODO: OPTION_VALUE_HALF=Half
-;TODO: OPTION_VALUE_FULL_VID=Full (Video)
-;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & Video)
+;TODO: OPTION_VALUE_FULL_VID=Full (video)
+;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & video)
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Чујте мој глас
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Позадинска музика
 SING_OPTIONS_SOUND_CLICK_ASSIST=Click assist
 SING_OPTIONS_SOUND_BEAT_CLICK=Beat click
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Provera jacine tona
 SING_OPTIONS_SOUND_PREVIEWFADING=Provera pomracenja
 
@@ -146,7 +134,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Posle Odabira Pesme
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Bezbednosna Pitanja
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Automatski Timski Meni
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on singing
 
 OPTION_VALUE_ALL=Sve
 OPTION_VALUE_PLAYER=Играч
@@ -155,12 +143,12 @@ OPTION_VALUE_PLAYER=Играч
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Корисничко име
 SING_OPTIONS_NETWORK_PASSWORD=Лозинка
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Играч
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Nazad
 ;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ MSG_INSERT_USER_CANCEL=Nazad
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 SONG_MENU_REFRESH_SCORES_FILE=Филе
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All Songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This Song
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
+;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
 ;TODO: SONG_SCORE_MEDIA=Average:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 SCORE_SEND_PLAYER=Играч
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Преузимање
 SCORE_DOWNLOAD_SONG=Сонг:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Nazad
 ;TODO: SCORE_DOWNLOAD_OK=OK
@@ -232,18 +220,18 @@ SING_OPTIONS_WEBCAM_SATURATION=Засићење
 SING_OPTIONS_WEBCAM_EFFECT=Efekti
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Stepen Cujnosti
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Дно
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Плави
-OPTION_VALUE_GREEN=Зелен
-OPTION_VALUE_PINK=Пинк
-OPTION_VALUE_RED=Црвена
-OPTION_VALUE_VIOLET=Виолет
-OPTION_VALUE_ORANGE=Наранџаста
-OPTION_VALUE_YELLOW=Жута
-OPTION_VALUE_BROWN=Бровн
-OPTION_VALUE_BLACK=Црн
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Греи
-OPTION_VALUE_WHITE=бео
-OPTION_VALUE_TURQUOISE=Тиркизна
-OPTION_VALUE_SALMON=Лосос
-OPTION_VALUE_GREENYELLOW=Зелено жута
-OPTION_VALUE_LAVENDER=Лаванда
-OPTION_VALUE_BEIGE=Беж
-OPTION_VALUE_TEAL=Теал
-OPTION_VALUE_ORCHID=Орхидеја
-OPTION_VALUE_STEELBLUE=Стеел Блуе
-OPTION_VALUE_PLUM=Шљива
-OPTION_VALUE_CHOCOLATE=Чоколада
-OPTION_VALUE_GOLD=Злато
-OPTION_VALUE_DARKBLUE=Тамно плава
-OPTION_VALUE_SKY=Небо
-OPTION_VALUE_HARLEQUIN=Харлекин
-OPTION_VALUE_CYAN=Цијан
-OPTION_VALUE_FLAME=Пламен
+
 
 SING_LEGEND_SELECT=Izaberi
 SING_LEGEND_NAVIGATE=Biraj
@@ -390,17 +351,18 @@ SONG_MENU_LEGEND_DUET=Дует
 SONG_MENU_NAME_SONG=Meni Pesme
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 SONG_MENU_ADD_SONG=Dodaj Pesmu
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Obrisi Pesmu
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -453,7 +415,7 @@ PARTY_DISMISSED=Otpusten!
 PARTY_SCORE_WINS=%s
 PARTY_SCORE_WINS2=Pobedio!
 
-;TODO: MODE_RANDOM_NAME=Random Mode
+;TODO: MODE_RANDOM_NAME=Random mode
 ;TODO: MODE_RANDOM_DESC=Keep yourself on your toes! The game will select a mode for you at random!
 
 MODE_HOLDTHELINE_NAME=Drzi liniju
@@ -544,13 +506,13 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx Pevano
 
 ;TODO: PARTY_SELECT_MODE=Mode
 PARTY_MODE_CLASSIC=Цлассиц
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
+;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Sledeci igraci za mikrofonom
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 JUKEBOX_RANDOM=Рандом
 JUKEBOX_REPEAT=Понављање
 JUKEBOX_FIND=пронаћи:
 ;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -578,7 +540,7 @@ JUKEBOX_FIND=пронаћи:
 NAME_PLAYERS_COUNT=Број играча
 NAME_CURRENT_PLAYER=Играч
 
-;TODO: JUKEBOX_MODE=Jukebox Mode
+;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=О томе...
 ABOUT_USDX_DEVELOPEDBY=Развијен од стране
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микр
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Ostalo
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Nazad
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
+C_COLOR_BEIGE=Беж
+C_COLOR_BLACK=Црн
+C_COLOR_BLUE=Плави
+C_COLOR_BROWN=Бровн
+C_COLOR_CYAN=Цијан
+C_COLOR_CHOCOLATE=Чоколада
+C_COLOR_DARKBLUE=Тамно плава
+C_COLOR_FLAME=Пламен
+C_COLOR_GOLD=Злато
+C_COLOR_GRAY=Греи
+C_COLOR_GREEN=Зелен
+C_COLOR_GREENYELLOW=Зелено жута
+C_COLOR_HARLEQUIN=Харлекин
+C_COLOR_LAVENDER=Лаванда
 ;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_ORANGE=Наранџаста
+C_COLOR_ORCHID=Орхидеја
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Пинк
+C_COLOR_PLUM=Шљива
+C_COLOR_RED=Црвена
+C_COLOR_SALMON=Лосос
+C_COLOR_SKY=Небо
+C_COLOR_STEELBLUE=Стеел Блуе
+C_COLOR_TEAL=Теал
+C_COLOR_TURQUOISE=Тиркизна
+C_COLOR_VIOLET=Виолет
+C_COLOR_WHITE=бео
+C_COLOR_YELLOW=Жута
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микр
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Igra
+C_GRAPHICS=Grafika
+
 ;TODO: C_INFORMATION=Information
+;C_INTERNET=Интернет
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Lirike
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Snimanje
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Zvuk
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Teme
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Вебцам
 
 ;TODO: C_YES=Yes
