--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Schwierig
 
 SING_OPTIONS=Optionen
 
-SING_OPTIONS_GAME=Spiel
-SING_OPTIONS_GRAPHICS=Grafik
-SING_OPTIONS_SOUND=Sound
-SING_OPTIONS_LYRICS=Lyrics
-SING_OPTIONS_THEMES=Design
-SING_OPTIONS_MICROPHONES=Mikrofone
-SING_OPTIONS_ADVANCED=Erweitert
-SING_OPTIONS_NETWORK=Internet
-SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Zurück
-
 SING_OPTIONS_GAME_LANGUAGE=Sprache
 SING_OPTIONS_GAME_SONGMENU=Menü
 SING_OPTIONS_GAME_DUETS=DuettScores
@@ -264,34 +252,7 @@ OPTION_VALUE_TO_SING=Singen
 OPTION_VALUE_OTHER=Other
 OPTION_VALUE_FILL=Füllung
 OPTION_VALUE_OUTLINE=Umriss
-OPTION_VALUE_BLUE=Blau
-OPTION_VALUE_GREEN=Grün
-OPTION_VALUE_PINK=Rosa
-OPTION_VALUE_RED=Rot
-OPTION_VALUE_VIOLET=Violett
-OPTION_VALUE_ORANGE=Orange
-OPTION_VALUE_YELLOW=Gelb
-OPTION_VALUE_BROWN=Braun
-OPTION_VALUE_BLACK=Schwarz
-OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Grau
-OPTION_VALUE_WHITE=Weiß
-OPTION_VALUE_TURQUOISE=Türkis
-OPTION_VALUE_SALMON=Lachsfarben
-OPTION_VALUE_GREENYELLOW=Grüngelb
-OPTION_VALUE_LAVENDER=Lavendel
-OPTION_VALUE_BEIGE=Beige
-OPTION_VALUE_TEAL=Blaugrün
-OPTION_VALUE_ORCHID=Orchidee
-OPTION_VALUE_STEELBLUE=Stahlblau
-OPTION_VALUE_PLUM=Pflaume
-OPTION_VALUE_CHOCOLATE=Schokolade
-OPTION_VALUE_GOLD=Gold
-OPTION_VALUE_DARKBLUE=Dunkelblau
-OPTION_VALUE_SKY=Himmelblau
-OPTION_VALUE_HARLEQUIN=Harlekin
-OPTION_VALUE_CYAN=Cyan
-OPTION_VALUE_FLAME=Flamme
+
 
 SING_LEGEND_SELECT=Auswählen
 SING_LEGEND_NAVIGATE=Navigieren
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Medley
 SONG_MENU_NAME_SONG=Song Menü
 SONG_MENU_NAME_MEDLEY=Medley Menü
 SONG_MENU_ADD_SONG=Song hinzufügen
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Song löschen
 SONG_MENU_START_MEDLEY=Singen!
 SONG_MENU_START_5_MEDLEY=%0:d Songs singen!
@@ -585,7 +547,7 @@ ABOUT_USDX_DEVELOPEDBY=Entwickelt von
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Entwickelt von
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜber
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Erweitert
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Zurück
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
 ;TODO: C_COLOR_BEIGE=Beige
 ;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_BLUE=Blau
+C_COLOR_BROWN=Braun
+C_COLOR_CYAN=Cyan
+C_COLOR_CHOCOLATE=Schokolade
+C_COLOR_DARKBLUE=Dunkelblau
+C_COLOR_FLAME=Flamme
+C_COLOR_GOLD=Gold
+C_COLOR_GRAY=Grau
+C_COLOR_GREEN=Grün
+C_COLOR_GREENYELLOW=Grüngelb
+C_COLOR_HARLEQUIN=Harlekin
+C_COLOR_LAVENDER=Lavendel
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Orange
+C_COLOR_ORCHID=Orchidee
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Rosa
+C_COLOR_PLUM=Pflaume
+C_COLOR_RED=Rot
+C_COLOR_SALMON=Lachsfarben
+C_COLOR_SKY=Himmelblau
+C_COLOR_STEELBLUE=Stahlblau
+C_COLOR_TEAL=Blaugrün
+C_COLOR_TURQUOISE=Türkis
+C_COLOR_VIOLET=Violett
+C_COLOR_WHITE=Weiß
+C_COLOR_YELLOW=Gelb
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Kein Mikrofon für Spieler %d gewählt.\nÜber
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Spiel
+C_GRAPHICS=Grafik
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Lyrics
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Mikrofone
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Sound
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Design
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
