--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -41,30 +41,18 @@ OPTION_VALUE_HARD=Zaila
 
 SING_OPTIONS=Hobespenak
 
-SING_OPTIONS_GAME=Jokoa
-SING_OPTIONS_GRAPHICS=Grafikoak
-SING_OPTIONS_SOUND=Soinua
-SING_OPTIONS_LYRICS=Letrak
-SING_OPTIONS_THEMES=Gaiak
-SING_OPTIONS_MICROPHONES=Grabazioa
-SING_OPTIONS_ADVANCED=Aurreratuak
-;TODO: SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Itzuli
-
 SING_OPTIONS_GAME_LANGUAGE=Hizkuntza
 SING_OPTIONS_GAME_SONGMENU=Menua
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Etiketak
 SING_OPTIONS_GAME_SORTING=Sailkapena
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 ;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activate gamepad
 
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
 ;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
+;TODO: OPTION_VALUE_SLOT_MACHINE=Slot machine
 ;TODO: OPTION_VALUE_LIST=List
 ;TODO: OPTION_VALUE_MOSAIC=Tile
 
@@ -82,19 +70,19 @@ OPTION_VALUE_ARTIST2=2.artista
 ;TODO: OPTION_VALUE_DECADE=Decade
 OPTION_VALUE_PLAYLIST=Zerrenda
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pantaila osoa
 SING_OPTIONS_GRAPHICS_RESOLUTION=Erresoluzioa
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen fading
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing effects
 SING_OPTIONS_GRAPHICS_VISUALIZER=Bistaratzeak
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Bideo tamaina
 
 ;TODO: OPTION_VALUE_BORDERLESS=Borderless
 
 OPTION_VALUE_WHENNOVIDEO=Bideorik ez badago
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No video and image
 
 OPTION_VALUE_HALF=Erdia
 OPTION_VALUE_FULL_VID=Osoa (Bideoa)
@@ -104,7 +92,7 @@ SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Mikrofono playback-a
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Atzeko soinua
 SING_OPTIONS_SOUND_CLICK_ASSIST=Noten laguntza
 SING_OPTIONS_SOUND_BEAT_CLICK=Kolpeen laguntza
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Bolumena aurreikusi
 SING_OPTIONS_SOUND_PREVIEWFADING=Desagerpena aurreikusi
 
@@ -146,7 +134,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Aukeratu ondoren
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ziurtasun galderak
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Talde menu auto
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on singing
 
 OPTION_VALUE_ALL=Guztia
 ;TODO: OPTION_VALUE_PLAYER=Player
@@ -155,12 +143,12 @@ OPTION_VALUE_ALL=Guztia
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 ;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
 ;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 SING_OPTIONS_NETWORK_AUTO_MODE=Automatikoa
 ;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Itzuli
 ;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ MSG_INSERT_USER_CANCEL=Itzuli
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All Songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This Song
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
+;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
 ;TODO: SONG_SCORE_MEDIA=Average:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 ;TODO: SCORE_SEND_PLAYER=Player
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 ;TODO: SCORE_DOWNLOAD_TITLE=Download
 ;TODO: SCORE_DOWNLOAD_SONG=Song:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Itzuli
 ;TODO: SCORE_DOWNLOAD_OK=OK
@@ -232,18 +220,18 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Erresoluzioa
 SING_OPTIONS_WEBCAM_EFFECT=Efektua
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Arintzea
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_TO_SING=Abestu
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Urdina
-OPTION_VALUE_GREEN=Berdea
-OPTION_VALUE_PINK=Arrosa
-OPTION_VALUE_RED=Gorria
-OPTION_VALUE_VIOLET=Morea
-OPTION_VALUE_ORANGE=Laranja
-OPTION_VALUE_YELLOW=Horia
-OPTION_VALUE_BROWN=Marroia
-OPTION_VALUE_BLACK=Beltza
-OPTION_VALUE_MAGENTA=Magenta
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+
 
 SING_LEGEND_SELECT=Hautatu
 SING_LEGEND_NAVIGATE=Nabigatu
@@ -390,17 +351,18 @@ SONG_MENU_NAME_PARTY_JOKER=Komodina erabili
 SONG_MENU_NAME_SONG=Menua
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 SONG_MENU_ADD_SONG=Abestia gehitu
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Zerrendatik ezabatu
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -544,13 +506,13 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx aldiz abestuta
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
+;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Erronda kopurua
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Hurrengoa mikrofonora
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 ;TODO: JUKEBOX_RANDOM=Random
 ;TODO: JUKEBOX_REPEAT=Repeat
 ;TODO: JUKEBOX_FIND=Find:
 ;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -575,17 +537,17 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Hurrengoa mikrofonora
 
 ;TODO: SING_SONGS_MYSCORES=My scores
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
+;TODO: NAME_PLAYERS_COUNT=Number of players
 ;TODO: NAME_CURRENT_PLAYER=Player
 
-;TODO: JUKEBOX_MODE=Jukebox Mode
+;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
 ;TODO: DEVELOPERS_TITLE=Developed by
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphones. Eg
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Aurreratuak
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Itzuli
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
 ;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
+C_COLOR_BLACK=Beltza
+C_COLOR_BLUE=Urdina
+C_COLOR_BROWN=Marroia
 ;TODO: C_COLOR_CYAN=Cyan
 ;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_DARKBLUE=Dark blue
 ;TODO: C_COLOR_FLAME=Flame
 ;TODO: C_COLOR_GOLD=Gold
 ;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
+C_COLOR_GREEN=Berdea
+;TODO: C_COLOR_GREENYELLOW=Greenyellow
 ;TODO: C_COLOR_HARLEQUIN=Harlequin
 ;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Laranja
 ;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Arrosa
 ;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
+C_COLOR_RED=Gorria
 ;TODO: C_COLOR_SALMON=Salmon
 ;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_STEELBLUE=Steel blue
 ;TODO: C_COLOR_TEAL=Teal
 ;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
+C_COLOR_VIOLET=Morea
 ;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_YELLOW=Horia
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphones. Eg
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Jokoa
+C_GRAPHICS=Grafikoak
+
 ;TODO: C_INFORMATION=Information
+;TODO: C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Letrak
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Grabazioa
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Soinua
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Gaiak
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
