--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -41,24 +41,12 @@ OPTION_VALUE_HARD=Teško
 
 SING_OPTIONS=Opcije
 
-SING_OPTIONS_GAME=Igra
-SING_OPTIONS_GRAPHICS=Video
-SING_OPTIONS_SOUND=Audio
-SING_OPTIONS_LYRICS=Tekstovi
-SING_OPTIONS_THEMES=Teme
-SING_OPTIONS_MICROPHONES=Snimanje
-SING_OPTIONS_ADVANCED=Ostalo
-SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Natrag
-
 SING_OPTIONS_GAME_LANGUAGE=Jezik
 SING_OPTIONS_GAME_SONGMENU=Playliste
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Tabovi
 SING_OPTIONS_GAME_SORTING=Sortiranje
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktivirajte gamepad
 
 OPTION_VALUE_ROULETTE=Roulet
@@ -82,7 +70,7 @@ OPTION_VALUE_YEAR=Godina
 OPTION_VALUE_DECADE=Desetljeće
 OPTION_VALUE_PLAYLIST=Playliste
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Cijeli ekran
 SING_OPTIONS_GRAPHICS_RESOLUTION=Rezolucija
@@ -97,14 +85,14 @@ OPTION_VALUE_WHENNOVIDEO=Kada nema videozapisa
 OPTION_VALUE_WHENNOVIDEOANDIMAGE=Kada nema videozapisa i slika
 
 ;TODO: OPTION_VALUE_HALF=Half
-;TODO: OPTION_VALUE_FULL_VID=Full (Video)
-;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & Video)
+;TODO: OPTION_VALUE_FULL_VID=Full (video)
+;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & video)
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Microphone Playback
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Pozadinska glazba
 SING_OPTIONS_SOUND_CLICK_ASSIST=Pomoć klikovima
 SING_OPTIONS_SOUND_BEAT_CLICK=Klik na udarce
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Glasnoća prikaza
 SING_OPTIONS_SOUND_PREVIEWFADING=Fade-in vrijeme
 
@@ -146,7 +134,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Nakon pjesme
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sigurn. pitanja
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto party meni
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on singing
 
 OPTION_VALUE_ALL=Sve
 OPTION_VALUE_PLAYER=Igrač
@@ -155,12 +143,12 @@ OPTION_VALUE_PLAYER=Igrač
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Korisničko ime
 SING_OPTIONS_NETWORK_PASSWORD=Lozinka
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Igrač
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Poništi
 ;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ MSG_INSERT_USER_CANCEL=Poništi
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All Songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This Song
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
+;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 SONG_SCORE_MAX=Najbolje:
 ;TODO: SONG_SCORE_MEDIA=Average:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 SCORE_SEND_PLAYER=Igrač
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 ;TODO: SCORE_DOWNLOAD_TITLE=Download
 ;TODO: SCORE_DOWNLOAD_SONG=Song:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Poništi
 ;TODO: SCORE_DOWNLOAD_OK=OK
@@ -232,18 +220,18 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Rezolucija
 SING_OPTIONS_WEBCAM_EFFECT=Efekt
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Threshold
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Dno
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Plava
-OPTION_VALUE_GREEN=Zelena
-OPTION_VALUE_PINK=Ružičasta
-OPTION_VALUE_RED=Crvena
-OPTION_VALUE_VIOLET=Ljubičasta
-;TODO: OPTION_VALUE_ORANGE=Orange
-OPTION_VALUE_YELLOW=Žuta boja
-OPTION_VALUE_BROWN=Smeđ
-OPTION_VALUE_BLACK=Crno
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+
 
 SING_LEGEND_SELECT=Odaberi
 SING_LEGEND_NAVIGATE=Navigacija
@@ -359,7 +320,7 @@ SONG_MENU_NAME_PLAYLIST_NEW=Nova Playlista
 SONG_MENU_PLAYLIST_NEW_CREATE=Napravi
 SONG_MENU_PLAYLIST_NEW_UNNAMED=Bez imena
 
-;TODO: SONG_MENU_NAME_PLAYLIST_DELITEM=Really Delete?
+;TODO: SONG_MENU_NAME_PLAYLIST_DELITEM=Really delete?
 SONG_MENU_YES=Da
 SONG_MENU_NO=Ne
 
@@ -390,17 +351,18 @@ SONG_MENU_LEGEND_DUET=Duet
 SONG_MENU_NAME_SONG=Playliste
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 SONG_MENU_ADD_SONG=Dodaj Pjesmu
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Izbriši Pjesmu
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -453,7 +415,7 @@ PARTY_DISMISSED=Izbacen!
 PARTY_SCORE_WINS=%s je
 PARTY_SCORE_WINS2=Pobijedio!
 
-;TODO: MODE_RANDOM_NAME=Random Mode
+;TODO: MODE_RANDOM_NAME=Random mode
 ;TODO: MODE_RANDOM_DESC=Keep yourself on your toes! The game will select a mode for you at random!
 
 MODE_HOLDTHELINE_NAME=Zadrži liniju
@@ -544,13 +506,13 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx otpjevano
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
+;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 ;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Sljed. igrači za mikr.
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 ;TODO: JUKEBOX_RANDOM=Random
 ;TODO: JUKEBOX_REPEAT=Repeat
 ;TODO: JUKEBOX_FIND=Find:
 ;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -578,14 +540,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Sljed. igrači za mikr.
 NAME_PLAYERS_COUNT=Broj igrača
 NAME_CURRENT_PLAYER=Igrač
 
-;TODO: JUKEBOX_MODE=Jukebox Mode
+;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Oko...
 ABOUT_USDX_DEVELOPEDBY=Razvijen od
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
-;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
 ABOUT_OVERVIEW=Otkrijte novi način pjevanja, sam, u paru ili s prijateljima. \n Zabava je zajamčena.\n\nWorldParty je fork izvorne verzije Ultrastar Deluxe 1.1 dizajniran i razvijen od strane UltraStar España tima, to broji s najvećom karaoke zajednice.\n\n\nOvaj je program besplatan i libre pod GPL licencom. \n\n Posjetite nas za više informacija.\n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Razvijen od
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu. Provjerit
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Ostalo
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Natrag
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
 ;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
+C_COLOR_BLACK=Crno
+C_COLOR_BLUE=Plava
+C_COLOR_BROWN=Smeđ
 ;TODO: C_COLOR_CYAN=Cyan
 ;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
+;TODO: C_COLOR_DARKBLUE=Dark blue
 ;TODO: C_COLOR_FLAME=Flame
 ;TODO: C_COLOR_GOLD=Gold
 ;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
+C_COLOR_GREEN=Zelena
+;TODO: C_COLOR_GREENYELLOW=Greenyellow
 ;TODO: C_COLOR_HARLEQUIN=Harlequin
 ;TODO: C_COLOR_LAVENDER=Lavender
 ;TODO: C_COLOR_MAGENTA=Magenta
 ;TODO: C_COLOR_ORANGE=Orange
 ;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Ružičasta
 ;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
+C_COLOR_RED=Crvena
 ;TODO: C_COLOR_SALMON=Salmon
 ;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_STEELBLUE=Steel blue
 ;TODO: C_COLOR_TEAL=Teal
 ;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
+C_COLOR_VIOLET=Ljubičasta
 ;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_YELLOW=Žuta boja
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igrač %d nije dodijeljen mikrofonu. Provjerit
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Igra
+C_GRAPHICS=Video
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Tekstovi
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Snimanje
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Audio
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Teme
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
