--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Difficile
 
 SING_OPTIONS=Impostazioni
 
-SING_OPTIONS_GAME=Generali
-SING_OPTIONS_GRAPHICS=Grafica
-SING_OPTIONS_SOUND=Audio
-SING_OPTIONS_LYRICS=Testi
-SING_OPTIONS_THEMES=Temi
-SING_OPTIONS_MICROPHONES=Microfono
-SING_OPTIONS_ADVANCED=Avanzate
-SING_OPTIONS_NETWORK=Internet
-SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Indietro
-
 SING_OPTIONS_GAME_LANGUAGE=Lingua
 SING_OPTIONS_GAME_SONGMENU=Menu Canzone
 SING_OPTIONS_GAME_DUETS=Duetti
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Inferiore
 OPTION_VALUE_OTHER=Altro
 OPTION_VALUE_FILL=Riempire
 OPTION_VALUE_OUTLINE=Contorno
-OPTION_VALUE_BLUE=Blu
-OPTION_VALUE_GREEN=Verde
-OPTION_VALUE_PINK=Rosa
-OPTION_VALUE_RED=Rosso
-OPTION_VALUE_VIOLET=Viola
-OPTION_VALUE_ORANGE=Arancione
-OPTION_VALUE_YELLOW=Giallo
-OPTION_VALUE_BROWN=Marrone
-OPTION_VALUE_BLACK=Nero
-OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Grigio
-OPTION_VALUE_WHITE=Bianco
-OPTION_VALUE_TURQUOISE=Turchese
-OPTION_VALUE_SALMON=Salmone
-OPTION_VALUE_GREENYELLOW=Verde giallo
-OPTION_VALUE_LAVENDER=Lavanda
-OPTION_VALUE_BEIGE=Beige
-OPTION_VALUE_TEAL=Verde acqua
-OPTION_VALUE_ORCHID=Orchidea
-OPTION_VALUE_STEELBLUE=Blu acciaio
-OPTION_VALUE_PLUM=Prugna
-OPTION_VALUE_CHOCOLATE=Cioccolato
-OPTION_VALUE_GOLD=Oro
-OPTION_VALUE_DARKBLUE=Blu scuro
-OPTION_VALUE_SKY=Celeste
-OPTION_VALUE_HARLEQUIN=Arlecchino
-OPTION_VALUE_CYAN=Ciano
-OPTION_VALUE_FLAME=Fiamma
+
 
 SING_LEGEND_SELECT=Seleziona
 SING_LEGEND_NAVIGATE=Naviga
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Medley
 SONG_MENU_NAME_SONG=Menu canzoni
 SONG_MENU_NAME_MEDLEY=Menu Medley
 SONG_MENU_ADD_SONG=Aggiungi canzone
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Cancella canzone
 SONG_MENU_START_MEDLEY=Canta!
 SONG_MENU_START_5_MEDLEY=Canta %0:d Canzoni!
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfo
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Avanzate
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
 C_BACK=Indietro
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_BEIGE=Beige
+C_COLOR_BLACK=Black
+C_COLOR_BLUE=Blu
+C_COLOR_BROWN=Marrone
+C_COLOR_CYAN=Ciano
+C_COLOR_CHOCOLATE=Cioccolato
+C_COLOR_DARKBLUE=Blu scuro
+C_COLOR_FLAME=Fiamma
+C_COLOR_GOLD=Oro
+C_COLOR_GRAY=Grigio
+C_COLOR_GREEN=Verde
+C_COLOR_GREENYELLOW=Verde giallo
+C_COLOR_HARLEQUIN=Arlecchino
+C_COLOR_LAVENDER=Lavanda
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Arancione
+C_COLOR_ORCHID=Orchidea
+C_COLOR_OTHER=Altro
+C_COLOR_PINK=Rosa
+C_COLOR_PLUM=Prugna
+C_COLOR_RED=Rosso
+C_COLOR_SALMON=Salmone
+C_COLOR_SKY=Celeste
+C_COLOR_STEELBLUE=Blu acciaio
+C_COLOR_TEAL=Verde acqua
+C_COLOR_TURQUOISE=Turchese
+C_COLOR_VIOLET=Viola
+C_COLOR_WHITE=Bianco
+C_COLOR_YELLOW=Giallo
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ C_BACK=Indietro
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Generali
+C_GRAPHICS=Grafica
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Testi
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Microfono
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 C_SEARCH_NEW_SONGS=Cerca nuove canzoni
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Audio
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Temi
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
