--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -41,18 +41,6 @@ OPTION_VALUE_HARD=Nehéz
 
 SING_OPTIONS=Beállítások
 
-SING_OPTIONS_GAME=Játék
-SING_OPTIONS_GRAPHICS=Grafika
-SING_OPTIONS_SOUND=Hang
-SING_OPTIONS_LYRICS=Dalszöveg
-SING_OPTIONS_THEMES=Témák
-SING_OPTIONS_MICROPHONES=Mikrofonok
-SING_OPTIONS_ADVANCED=Haladó
-SING_OPTIONS_NETWORK=Internet
-SING_OPTIONS_WEBCAM=Webkamera
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Vissza
-
 SING_OPTIONS_GAME_LANGUAGE=Nyelv
 SING_OPTIONS_GAME_SONGMENU=Dal Menü
 SING_OPTIONS_GAME_DUETS=Duett
@@ -264,34 +252,7 @@ OPTION_VALUE_TO_SING=Énekelt szöveg
 OPTION_VALUE_OTHER=Egyéb
 OPTION_VALUE_FILL=Egyszerű
 OPTION_VALUE_OUTLINE=Körvonal
-OPTION_VALUE_BLUE=Kék
-OPTION_VALUE_GREEN=Zöld
-OPTION_VALUE_PINK=Rózsaszín
-OPTION_VALUE_RED=Piros
-OPTION_VALUE_VIOLET=Lila
-OPTION_VALUE_ORANGE=Narancs
-OPTION_VALUE_YELLOW=Sárga
-OPTION_VALUE_BROWN=Barna
-OPTION_VALUE_BLACK=Fekete
-OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Szürke
-OPTION_VALUE_WHITE=Fehér
-OPTION_VALUE_TURQUOISE=Türkiz
-OPTION_VALUE_SALMON=Vörösessárga
-OPTION_VALUE_GREENYELLOW=Sárgászöld
-OPTION_VALUE_LAVENDER=Levendulakék
-OPTION_VALUE_BEIGE=Bézs
-OPTION_VALUE_TEAL=Kékeszöld
-OPTION_VALUE_ORCHID=Orgonalila
-OPTION_VALUE_STEELBLUE=Acélkék
-OPTION_VALUE_PLUM=Pasztelpink
-OPTION_VALUE_CHOCOLATE=Csokoládébarna
-OPTION_VALUE_GOLD=Aranysárga
-OPTION_VALUE_DARKBLUE=Sötétkék
-OPTION_VALUE_SKY=Égszínkék
-OPTION_VALUE_HARLEQUIN=Limezöld
-OPTION_VALUE_CYAN=Ciánkék
-OPTION_VALUE_FLAME=Tűzvörös
+
 
 SING_LEGEND_SELECT=Választás
 SING_LEGEND_NAVIGATE=Navigálás
@@ -390,6 +351,7 @@ SONG_MENU_MEDLEY=Egyveleg
 SONG_MENU_NAME_SONG=Szám Menü
 SONG_MENU_NAME_MEDLEY=Egyveleg Menü
 SONG_MENU_ADD_SONG=Hozzáadás
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Törlés
 SONG_MENU_START_MEDLEY=Éneklés
 SONG_MENU_START_5_MEDLEY=Énekelj %0:d Dalt!
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Játékos %d nincs egy mikrofonhoz sem rendelv
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Haladó
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Vissza
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_BEIGE=Bézs
+C_COLOR_BLACK=Fekete
+C_COLOR_BLUE=Kék
+C_COLOR_BROWN=Barna
+C_COLOR_CYAN=Ciánkék
+C_COLOR_CHOCOLATE=Csokoládébarna
+C_COLOR_DARKBLUE=Sötétkék
+C_COLOR_FLAME=Tűzvörös
+C_COLOR_GOLD=Aranysárga
+C_COLOR_GRAY=Szürke
+C_COLOR_GREEN=Zöld
+C_COLOR_GREENYELLOW=Sárgászöld
+C_COLOR_HARLEQUIN=Limezöld
+C_COLOR_LAVENDER=Levendulakék
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Narancs
+C_COLOR_ORCHID=Orgonalila
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Rózsaszín
+C_COLOR_PLUM=Pasztelpink
+C_COLOR_RED=Piros
+C_COLOR_SALMON=Vörösessárga
+C_COLOR_SKY=Égszínkék
+C_COLOR_STEELBLUE=Acélkék
+C_COLOR_TEAL=Kékeszöld
+C_COLOR_TURQUOISE=Türkiz
+C_COLOR_VIOLET=Lila
+C_COLOR_WHITE=Fehér
+C_COLOR_YELLOW=Sárga
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Játékos %d nincs egy mikrofonhoz sem rendelv
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Játék
+C_GRAPHICS=Grafika
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Dalszöveg
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+;TODO: C_MICROPHONES=Mikrofonok
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Hang
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Témák
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+C_WEBCAM=Webkamera
 
 ;TODO: C_YES=Yes
