--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -41,24 +41,12 @@ OPTION_VALUE_HARD=Erfitt
 
 SING_OPTIONS=Stillingar
 
-SING_OPTIONS_GAME=Leikur
-SING_OPTIONS_GRAPHICS=Mynd
-SING_OPTIONS_SOUND=Hljóð
-SING_OPTIONS_LYRICS=Lagatextar
-SING_OPTIONS_THEMES=Snið
-SING_OPTIONS_MICROPHONES=Upptaka
-SING_OPTIONS_ADVANCED=Fleiri stillingar
-SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Til baka
-
 SING_OPTIONS_GAME_LANGUAGE=Tungumál
 SING_OPTIONS_GAME_SONGMENU=Lagavalmynd
 ;TODO: SING_OPTIONS_GAME_DUETS=Duets
 SING_OPTIONS_GAME_TABS=Flipar
 SING_OPTIONS_GAME_SORTING=Röðun
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Virkja gamepad
 
 OPTION_VALUE_ROULETTE=Rúlletta
@@ -82,7 +70,7 @@ OPTION_VALUE_YEAR=Ár
 OPTION_VALUE_DECADE=Áratugur
 OPTION_VALUE_PLAYLIST=Lagalisti
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Skjáfyllir
 SING_OPTIONS_GRAPHICS_RESOLUTION=Skjáupplausn
@@ -104,7 +92,7 @@ SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Spilun af hljóðnema
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Bakgrunnstónlist
 SING_OPTIONS_SOUND_CLICK_ASSIST=Taktstuðningur
 SING_OPTIONS_SOUND_BEAT_CLICK=Slá takt
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Forsýn hljóðstyrkur
 SING_OPTIONS_SOUND_PREVIEWFADING=Forsýn útþynning
 
@@ -146,7 +134,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Eftir Lagaval
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Öryggisspurningar
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Sjálfvirk Partívalmynd
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on singing
 
 OPTION_VALUE_ALL=Öllu
 OPTION_VALUE_PLAYER=Leikmaður
@@ -155,12 +143,12 @@ OPTION_VALUE_PLAYER=Leikmaður
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Notendanafn
 SING_OPTIONS_NETWORK_PASSWORD=Lykilorð
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 SING_OPTIONS_NETWORK_AUTO_MODE=Sjálfvirkt
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Leikmaður
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Hætta við
 ;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ SONG_MENU_REFRESH_SCORES_TITLE=Uppfæra
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All Songs
-;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This Song
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_SONGS=All songs
+;TODO: SONG_MENU_REFRESH_SCORES_ONLY_SONG=This song
 SONG_MENU_REFRESH_SCORES_REFRESH=Uppfæra
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
 ;TODO: SONG_SCORE_MEDIA=Average:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 ;TODO: SCORE_SEND_PLAYER=Player
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Sækja
 ;TODO: SCORE_DOWNLOAD_SONG=Song:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Hætta við
 ;TODO: SCORE_DOWNLOAD_OK=OK
@@ -233,17 +221,17 @@ SING_OPTIONS_WEBCAM_EFFECT=Brellur
 SING_OPTIONS_WEBCAM_PREVIEW=Virkja forskoðun
 
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Virkja forskoðun
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Þröskuldur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Neðst
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Blár
-OPTION_VALUE_GREEN=Grænn
-OPTION_VALUE_PINK=Bleikur
-OPTION_VALUE_RED=Rauður
-OPTION_VALUE_VIOLET=Fjólublár
-OPTION_VALUE_ORANGE=Appelsínulitur
-OPTION_VALUE_YELLOW=Gulur
-OPTION_VALUE_BROWN=Brúnn
-OPTION_VALUE_BLACK=Svartur
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-;TODO: OPTION_VALUE_GRAY=Gray
-OPTION_VALUE_WHITE=Hvítur
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-OPTION_VALUE_CHOCOLATE=Súkkulaði
-OPTION_VALUE_GOLD=Gull
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+
 
 SING_LEGEND_SELECT=Velja
 SING_LEGEND_NAVIGATE=Stýra
@@ -390,17 +351,18 @@ SONG_MENU_NAME_PARTY_JOKER=Taka jóker
 SONG_MENU_NAME_SONG=Lagavalmynd
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 SONG_MENU_ADD_SONG=Bæta við
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Eyða lagi
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 ;TODO: SONG_SEARCH_DESC=What do you want to sing now?
 
@@ -544,13 +506,13 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx Sungið
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
+;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Fjöldi umferða
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Næstu leikmenn að hljóðnemunum
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 ;TODO: JUKEBOX_RANDOM=Random
 ;TODO: JUKEBOX_REPEAT=Repeat
 ;TODO: JUKEBOX_FIND=Find:
 ;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -578,7 +540,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Næstu leikmenn að hljóðnemunum
 NAME_PLAYERS_COUNT=Fjöldi leikmanna
 NAME_CURRENT_PLAYER=Leikmaður
 
-;TODO: JUKEBOX_MODE=Jukebox Mode
+;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Um...
 ABOUT_USDX_DEVELOPEDBY=Þróað af
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Leikmaður %d er ekki úthlutað í hljóðnem
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Fleiri stillingar
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Til baka
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
 ;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
+C_COLOR_BLACK=Svartur
+C_COLOR_BLUE=Blár
+C_COLOR_BROWN=Brúnn
 ;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
+C_COLOR_CHOCOLATE=Súkkulaði
+;TODO: C_COLOR_DARKBLUE=Dark blue
 ;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
+C_COLOR_GOLD=Gull
 ;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
+C_COLOR_GREEN=Grænn
+;TODO: C_COLOR_GREENYELLOW=Greenyellow
 ;TODO: C_COLOR_HARLEQUIN=Harlequin
 ;TODO: C_COLOR_LAVENDER=Lavender
 ;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
+C_COLOR_ORANGE=Appelsínulitur
 ;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Bleikur
 ;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
+C_COLOR_RED=Rauður
 ;TODO: C_COLOR_SALMON=Salmon
 ;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
+;TODO: C_COLOR_STEELBLUE=Steel blue
 ;TODO: C_COLOR_TEAL=Teal
 ;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_VIOLET=Fjólublár
+C_COLOR_WHITE=Hvítur
+C_COLOR_YELLOW=Gulur
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Leikmaður %d er ekki úthlutað í hljóðnem
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Leikur
+C_GRAPHICS=Mynd
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Internet
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Lagatextar
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Upptaka
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Hljóð
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Snið
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
