--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -41,24 +41,12 @@ OPTION_VALUE_HARD=Δύσκολο
 
 SING_OPTIONS=Επιλογές
 
-SING_OPTIONS_GAME=Παιχνίδι
-SING_OPTIONS_GRAPHICS=Γραφικά
-SING_OPTIONS_SOUND=Ήχος
-SING_OPTIONS_LYRICS=Στίχοι
-SING_OPTIONS_THEMES=Θέματα
-SING_OPTIONS_MICROPHONES=Ηχογράφηση
-SING_OPTIONS_ADVANCED=Για προχωρημένους
-SING_OPTIONS_NETWORK=Διαδίκτυο
-;TODO: SING_OPTIONS_WEBCAM=Webcam
-;TODO: SING_OPTIONS_PROFILES=Profiles
-SING_OPTIONS_EXIT=Πίσω
-
 SING_OPTIONS_GAME_LANGUAGE=Γλώσσα
 SING_OPTIONS_GAME_SONGMENU=Μενού τραγουδιού
 SING_OPTIONS_GAME_DUETS=Ντουέτες
 SING_OPTIONS_GAME_TABS=Ετικέτες
 SING_OPTIONS_GAME_SORTING=Ταξινόμιση
-;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
+;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show scores
 SING_OPTIONS_GAME_JOYPAD_SUPPORT=Ενεργοποίηση gamepad
 
 OPTION_VALUE_ROULETTE=Ρουλέτα
@@ -82,7 +70,7 @@ OPTION_VALUE_YEAR=Ετος
 OPTION_VALUE_DECADE=Δεκαετία
 OPTION_VALUE_PLAYLIST=Λίστα
 
-;TODO: OPTION_VALUE_WHEN_EXISTS=When Exists
+;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
 
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Πλήρης οθόνη
 SING_OPTIONS_GRAPHICS_RESOLUTION=Ανάλυση
@@ -97,14 +85,14 @@ OPTION_VALUE_WHENNOVIDEO=Όταν δεν υπάρχει βίντεο
 OPTION_VALUE_WHENNOVIDEOANDIMAGE=Όταν δεν υπάρχει βίντεο και εικόνα
 
 ;TODO: OPTION_VALUE_HALF=Half
-;TODO: OPTION_VALUE_FULL_VID=Full (Video)
-;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & Video)
+;TODO: OPTION_VALUE_FULL_VID=Full (video)
+;TODO: OPTION_VALUE_FULL_VID_BG=Full (BG & video)
 
 SING_OPTIONS_SOUND_VOICEPASSTHROUGH=Ήχος μικροφώνου
 SING_OPTIONS_SOUND_BACKGROUNDMUSIC=Μουσική στο μενού
 SING_OPTIONS_SOUND_CLICK_ASSIST=Βοήθεια με κλίκ
 SING_OPTIONS_SOUND_BEAT_CLICK=Βοήθεια ρυθμού
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Ένταση προεπισκόπισης
 SING_OPTIONS_SOUND_PREVIEWFADING=Σβήσιμο προεπισκόπισης
 
@@ -146,7 +134,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Μετά απο την επιλογή τραγ
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ερωτήσεις ασφαλείας
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Αυτόματο μενού "Πάρτυ"
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
-;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
+;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on singing
 
 OPTION_VALUE_ALL=Όλα
 OPTION_VALUE_PLAYER=Παίχτης
@@ -155,12 +143,12 @@ OPTION_VALUE_PLAYER=Παίχτης
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
 SING_OPTIONS_NETWORK_USERNAME=Όνομα χρήστη
 SING_OPTIONS_NETWORK_PASSWORD=Κωδικός πρόσβασης
-;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
+;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send name
 ;TODO: SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Παίχτης
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
-;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-send (easy)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-send (medium)
+;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-send (hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
@@ -186,10 +174,10 @@ MSG_INSERT_USER_CANCEL=Ακύρωση
 ;TODO: WEBSITE_LOGIN_ERROR=Login Incorrect!
 ;TODO: WEBSITE_BLANK_LOGIN=There are blank fields!
 ;TODO: WEBSITE_EXIST_USER=Existing user!
-;TODO: WEBSITE_ERROR_SCORE=Scoring Error!
+;TODO: WEBSITE_ERROR_SCORE=Scoring error!
 ;TODO: WEBSITE_OK_SEND=Score sent successfully!
-;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing Score!
-;TODO: WEBSITE_ERROR_SONG=Song Not Found!
+;TODO: WEBSITE_ERROR_SCORE_DUPLICATED=Existing score!
+;TODO: WEBSITE_ERROR_SONG=Song not found!
 ;TODO: WEBSITE_SAVE_SCORE=Score save successfully!
 ;TODO: WEBSITE_NO_CONNECTION_SAVE=No website connection! Save user anyway?
 
@@ -198,25 +186,25 @@ MSG_INSERT_USER_CANCEL=Ακύρωση
 ;TODO: SONG_MENU_REFRESH_SCORES_NO_WEB=There aren't websites!
 ;TODO: SONG_MENU_REFRESH_SCORES_ONLINE=Online
 ;TODO: SONG_MENU_REFRESH_SCORES_FILE=File
-;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All Websites
+;TODO: SONG_MENU_REFRESH_SCORES_ALL_WEB=All websites
 SONG_MENU_REFRESH_SCORES_ALL_SONGS=Ολα τα τραγούδια
 SONG_MENU_REFRESH_SCORES_ONLY_SONG=Αυτό το τραγούδι
 ;TODO: SONG_MENU_REFRESH_SCORES_REFRESH=Update
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [download scores]'!
 
 ;TODO: SONG_SCORE_MAX=Best:
 SONG_SCORE_MEDIA=Μέσος:
 
-;TODO: SCORE_SEND_DESC=Send Score
+;TODO: SCORE_SEND_DESC=Send score
 ;TODO: SCORE_SEND=Send
 SCORE_SEND_PLAYER=Παίχτης
-;TODO: SCORE_SEND_OTHER_USER= Other Username
+;TODO: SCORE_SEND_OTHER_USER= Other username
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Κατεβάστε
 SCORE_DOWNLOAD_SONG=Τραγούδι:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
+;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing list...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Ακύρωση
 ;TODO: SCORE_DOWNLOAD_OK=OK
@@ -232,18 +220,18 @@ SING_OPTIONS_WEBCAM_SATURATION=Κορεσμός
 SING_OPTIONS_WEBCAM_EFFECT=Εφέ
 SING_OPTIONS_WEBCAM_PREVIEW=Ενεργοποίηση προεπισκόπησης
 
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable preview
+;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable preview
+;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No webcam found!
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & white
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ευαισθησία μικροφώνου
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -264,34 +252,7 @@ OPTION_VALUE_BOTTOM=Κάτω μέρος
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-OPTION_VALUE_BLUE=Μπλε
-OPTION_VALUE_GREEN=Πράσινος
-OPTION_VALUE_PINK=Ροζ
-OPTION_VALUE_RED=κόκκινο
-OPTION_VALUE_VIOLET=Βιολέτα
-OPTION_VALUE_ORANGE=Πορτοκάλι
-OPTION_VALUE_YELLOW=Κίτρινος
-OPTION_VALUE_BROWN=Καστανός
-OPTION_VALUE_BLACK=Μαύρος
-;TODO: OPTION_VALUE_MAGENTA=Magenta
-OPTION_VALUE_GRAY=Γκρί
-OPTION_VALUE_WHITE=άσπρο
-OPTION_VALUE_TURQUOISE=Τουρκουάζ
-OPTION_VALUE_SALMON=Σολομός
-OPTION_VALUE_GREENYELLOW=Πράσινο κίτρινο
-OPTION_VALUE_LAVENDER=Λεβάντα
-OPTION_VALUE_BEIGE=Μπεζ
-OPTION_VALUE_TEAL=Βάσκας
-OPTION_VALUE_ORCHID=Ορχιδέα
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-OPTION_VALUE_PLUM=Δαμάσκηνο
-OPTION_VALUE_CHOCOLATE=Σοκολάτα
-OPTION_VALUE_GOLD=Χρυσός
-OPTION_VALUE_DARKBLUE=Σκούρο μπλε
-OPTION_VALUE_SKY=Ουρανός
-OPTION_VALUE_HARLEQUIN=Αρλεκίνος
-OPTION_VALUE_CYAN=Κυανό
-OPTION_VALUE_FLAME=Φλόγα
+
 
 SING_LEGEND_SELECT=Επέλεξε
 SING_LEGEND_NAVIGATE=Εξερέυνηση
@@ -359,7 +320,7 @@ SONG_MENU_NAME_PLAYLIST_NEW=Νέα λίστα
 SONG_MENU_PLAYLIST_NEW_CREATE=Φτιαξε νέα
 SONG_MENU_PLAYLIST_NEW_UNNAMED=Χωρίς όνομα
 
-;TODO: SONG_MENU_NAME_PLAYLIST_DELITEM=Really Delete?
+;TODO: SONG_MENU_NAME_PLAYLIST_DELITEM=Really delete?
 SONG_MENU_YES=Ναι
 SONG_MENU_NO=Όχι
 
@@ -390,17 +351,18 @@ SONG_MENU_SONG=Τραγούδι
 SONG_MENU_NAME_SONG=Μενού τραγουδιού
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
 SONG_MENU_ADD_SONG=Πρόσθεσε τραγούδι
+;TODO: SONG_MENU_ADD_SONG_TO_LIST=Add song to the list
 SONG_MENU_DELETE_SONG=Διέγραψε τραγούδι
 ;TODO: SONG_MENU_START_MEDLEY=Sing!
-;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d Songs!
+;TODO: SONG_MENU_START_5_MEDLEY=Sing %0:d songs!
 
-;TODO: SONG_MENU_NAME_SORTING=Sort Menu
+;TODO: SONG_MENU_NAME_SORTING=Sort menu
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
 ;TODO: SONG_MENU_OPEN_CATEGORY=Open category
 ;TODO: SONG_MENU_CLOSE_CATEGORY=Close category
-;TODO: SONG_MENU_START_JUKEBOX=Start Jukebox!
-;TODO: SONG_MENU_NAME_JUKEBOX=Menu Jukebox
+;TODO: SONG_MENU_START_JUKEBOX=Start jukebox!
+;TODO: SONG_MENU_NAME_JUKEBOX=Menu jukebox
 
 SONG_SEARCH_DESC=Что ты хочешь спеть сейчас?
 
@@ -433,7 +395,7 @@ PARTY_SONG_LEGEND_CONTINUE=Τραγουδήστε
 PARTY_SONG_MENU=Μενού "Πάρτυ"
 
 OPTION_VALUE_SING=Τραγουδήστε
-;TODO: OPTION_VALUE_SELECT_PLAYERS=Select Players
+;TODO: OPTION_VALUE_SELECT_PLAYERS=Select players
 OPTION_VALUE_OPEN_MENU=Ανοίξτε μενού
 
 PARTY_SCORE_DESC=Βαθμολογία τελευταίου γύρου
@@ -453,7 +415,7 @@ PARTY_DISMISSED=Αποβολή!
 PARTY_SCORE_WINS=%s
 PARTY_SCORE_WINS2=Νίκησε!
 
-;TODO: MODE_RANDOM_NAME=Random Mode
+;TODO: MODE_RANDOM_NAME=Random mode
 ;TODO: MODE_RANDOM_DESC=Keep yourself on your toes! The game will select a mode for you at random!
 
 MODE_HOLDTHELINE_NAME=Μείνε πάνω από τη μπάρα!
@@ -544,7 +506,7 @@ STAT_FORMAT_BANDS=%0:s \n %1:dx τραγουδήθηκαν
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
-;TODO: PARTY_MODE_CLASSIC_FREE=Classic Free
+;TODO: PARTY_MODE_CLASSIC_FREE=Classic free
 ;TODO: PARTY_MODE_CHALLENGE=Challenge
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
@@ -560,14 +522,14 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Επόμενοι παίχτες
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
+;TODO: MSG_END_JUKEBOX=Do you want leave jukebox mode?
 JUKEBOX_RANDOM=Τυχαίος
 JUKEBOX_REPEAT=Επαναλαμβάνω
 JUKEBOX_FIND=Εύρημα:
 ;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+;TODO: JUKEBOX_SONGLIST=List of songs
 
-;TODO: PARTY_PLAYLIST_MANUAL=Manual Selection
+;TODO: PARTY_PLAYLIST_MANUAL=Manual selection
 ;TODO: PARTY_MODE_JUKEBOX_NO_SONGS=Playlist is empty!
 
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
@@ -575,10 +537,10 @@ JUKEBOX_FIND=Εύρημα:
 
 ;TODO: SING_SONGS_MYSCORES=My scores
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
+;TODO: NAME_PLAYERS_COUNT=Number of players
 ;TODO: NAME_CURRENT_PLAYER=Player
 
-;TODO: JUKEBOX_MODE=Jukebox Mode
+;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Σχετικά με...
 ABOUT_USDX_DEVELOPEDBY=Αναπτύχθηκε από
@@ -614,41 +576,44 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Παίχτης %d δεν έχει αντιστ
 ;COMMON TRANSLATIONS:
 
 ;TODO: C_ABOUT=About...
+C_ADVANCED=Για προχωρημένους
 ;TODO: C_ALL=All
+;TODO: C_APPLY_CHANGES=Apply changes
 
-;TODO: C_BACK=Back
+C_BACK=Πίσω
 ;TODO: C_BOTTOM=Bottom
 
 ;TODO: C_CLASSIC=Classic
 ;TODO: C_CHALLENGE=Challenge
-;TODO: C_COLOR_BEIGE=Beige
-;TODO: C_COLOR_BLACK=Black
-;TODO: C_COLOR_BLUE=Blue
-;TODO: C_COLOR_BROWN=Brown
-;TODO: C_COLOR_CYAN=Cyan
-;TODO: C_COLOR_CHOCOLATE=Chocolate
-;TODO: C_COLOR_DARKBLUE=Dark Blue
-;TODO: C_COLOR_FLAME=Flame
-;TODO: C_COLOR_GOLD=Gold
-;TODO: C_COLOR_GRAY=Gray
-;TODO: C_COLOR_GREEN=Green
-;TODO: C_COLOR_GREENYELLOW=GreenYellow
-;TODO: C_COLOR_HARLEQUIN=Harlequin
-;TODO: C_COLOR_LAVENDER=Lavender
-;TODO: C_COLOR_MAGENTA=Magenta
-;TODO: C_COLOR_ORANGE=Orange
-;TODO: C_COLOR_ORCHID=Orchid
-;TODO: C_COLOR_PINK=Pink
-;TODO: C_COLOR_PLUM=Plum
-;TODO: C_COLOR_RED=Red
-;TODO: C_COLOR_SALMON=Salmon
-;TODO: C_COLOR_SKY=Sky
-;TODO: C_COLOR_STEELBLUE=Steel Blue
-;TODO: C_COLOR_TEAL=Teal
-;TODO: C_COLOR_TURQUOISE=Turquoise
-;TODO: C_COLOR_VIOLET=Violet
-;TODO: C_COLOR_WHITE=White
-;TODO: C_COLOR_YELLOW=Yellow
+C_COLOR_BEIGE=Μπεζ
+C_COLOR_BLACK=Μαύρος
+C_COLOR_BLUE=Μπλε
+C_COLOR_BROWN=Καστανός
+C_COLOR_CYAN=Κυανό
+C_COLOR_CHOCOLATE=Σοκολάτα
+C_COLOR_DARKBLUE=Σκούρο μπλε
+C_COLOR_FLAME=Φλόγα
+C_COLOR_GOLD=Χρυσός
+C_COLOR_GRAY=Γκρί
+C_COLOR_GREEN=Πράσινος
+C_COLOR_GREENYELLOW=Πράσινο κίτρινο
+C_COLOR_HARLEQUIN=Αρλεκίνος
+C_COLOR_LAVENDER=Λεβάντα
+C_COLOR_MAGENTA=Magenta
+C_COLOR_ORANGE=Πορτοκάλι
+C_COLOR_ORCHID=Ορχιδέα
+;TODO: C_COLOR_OTHER=Other
+C_COLOR_PINK=Ροζ
+C_COLOR_PLUM=Δαμάσκηνο
+C_COLOR_RED=κόκκινο
+C_COLOR_SALMON=Σολομός
+C_COLOR_SKY=Ουρανός
+C_COLOR_STEELBLUE=Steel blue
+C_COLOR_TEAL=Βάσκας
+C_COLOR_TURQUOISE=Τουρκουάζ
+C_COLOR_VIOLET=Βιολέτα
+C_COLOR_WHITE=άσπρο
+C_COLOR_YELLOW=Κίτρινος
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
@@ -658,38 +623,64 @@ ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Παίχτης %d δεν έχει αντιστ
 ;TODO: C_FIXEDBY=Fixed by
 ;TODO: C_FOLDERS=Folders
 
+C_GAME=Παιχνίδι
+C_GRAPHICS=Γραφικά
+
 ;TODO: C_INFORMATION=Information
+C_INTERNET=Διαδίκτυο
 
 ;TODO: C_JOKER=Joker
 ;TODO: C_JUKEBOX=Jukebox
 
-;TODO: C_PLAYERS=Players
-
 ;TODO: C_LEGEND=Legend
 ;TODO: C_LINE=Line
+C_LYRICS=Στίχοι
 
 ;TODO: C_MEDLEY=Medley
-;TODO: C_MEDLEYC=Medyley Calcultated
+;TODO: C_MEDLEYC=Medyley calcultated
+C_MICROPHONES=Ηχογράφηση
 ;TODO: C_MODE=Mode
 
 ;TODO: C_NEXT=Next
 ;TODO: C_NO=No
+;TODO: C_NO_INTERNET_CONNECTION=No internet connection
+
+;TODO: C_OPEN_PLAYLIST=Open playlist
+;TODO: C_OPTIONS=Options
+
+;TODO: C_PLAYERS=Players
+;TODO: C_PLAYLIST=Playlist
+;TODO: C_PROFILES=Profiles
+
+;TODO: C_QUIT=Quit
 
 ;TODO: C_RANDOM=Random
 ;TODO: C_RAP=Rap
+;TODO: C_REFRESH_SCORES=Refresh scores
 ;TODO: C_REPEAT=Repeat
 
 ;TODO: C_SAVE=Save
 ;TODO: C_SEARCH_NEW_SONGS=Search for new songs
+;TODO: C_SELECT_THIS_SONG=Select this song
+;TODO: C_SEND=Send
 ;TODO: C_SING=Sing
+;TODO: C_SING_MEDLEY=Sing medley
 ;TODO: C_SONG=Song
 ;TODO: C_SONGS=Songs
 ;TODO: C_SORT=Sort
+;TODO: C_SORT_SONGS=Sort songs
+C_SOUND=Ήχος
+;TODO: C_STATISTICS=Statistics
+;TODO: C_STATS=Stats
 
+;TODO: C_THEME=Theme
+C_THEMES=Θέματα
 ;TODO: C_TOP=Top
 
 ;TODO: C_UNVALIDATED=Unvalidated
 
 ;TODO: C_VIDEO=Video
+
+;TODO: C_WEBCAM=Webcam
 
 ;TODO: C_YES=Yes
